[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/StreetPanel.gd" id="1_8s4ft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.0627451, 0.0823529, 0.117647, 1)

[node name="StreetPanel" type="PanelContainer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s4ft")

theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_colors/font_color = Color(0.980392, 0.843137, 0.458824, 1)
text = "Street Hustle & Expeditions"

[node name="GoldRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GoldLabel" type="Label" parent="MarginContainer/VBox/GoldRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "Gold:"

[node name="GoldValueLabel" type="Label" parent="MarginContainer/VBox/GoldRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.843137, 0.458824, 1)
text = "0"

[node name="StealButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Steal"

[node name="FeedbackLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.866667, 0.968627, 1)
text = "Ready to steal."
autowrap_mode = 3

[node name="ProgressionHintTitle" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "Progression"

[node name="ProgressionHintLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "..."
autowrap_mode = 3

[node name="SeparatorExpeditions" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ExpeditionHeader" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.980392, 0.843137, 0.458824, 1)
text = "Crew Roster & Expedition Management"

[node name="ExpeditionColumns" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="AssignmentColumn" type="VBoxContainer" parent="MarginContainer/VBox/ExpeditionColumns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="IdleCrewTitle" type="Label" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "Idle Crew"

[node name="IdleCrewList" type="ItemList" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 180)
layout_mode = 2
size_flags_vertical = 3
select_mode = 2
allow_reselect = true

[node name="TemplateRow" type="HBoxContainer" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TemplateLabel" type="Label" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn/TemplateRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "Template"

[node name="TemplatePicker" type="OptionButton" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn/TemplateRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateInfoLabel" type="RichTextLabel" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="AssignmentHintLabel" type="Label" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.866667, 0.968627, 1)
text = "Select idle crew and an expedition template."
autowrap_mode = 3

[node name="StartExpeditionButton" type="Button" parent="MarginContainer/VBox/ExpeditionColumns/AssignmentColumn"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Expedition"

[node name="StatusColumn" type="VBoxContainer" parent="MarginContainer/VBox/ExpeditionColumns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ActiveTitle" type="Label" parent="MarginContainer/VBox/ExpeditionColumns/StatusColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "Active Expeditions"

[node name="ActiveExpeditionsLabel" type="RichTextLabel" parent="MarginContainer/VBox/ExpeditionColumns/StatusColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
size_flags_vertical = 3
fit_content = true
scroll_active = false
text = "No active expeditions."

[node name="ClaimableTitle" type="Label" parent="MarginContainer/VBox/ExpeditionColumns/StatusColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0.858824, 0.92549, 1)
text = "Completed / Claimable Expeditions"

[node name="ClaimableExpeditionsList" type="ItemList" parent="MarginContainer/VBox/ExpeditionColumns/StatusColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 140)
layout_mode = 2
size_flags_vertical = 3

[node name="ClaimButton" type="Button" parent="MarginContainer/VBox/ExpeditionColumns/StatusColumn"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Claim Selected"
